testsuite/tests/backpack/should_fail/bkpfail01.stderr
[1 of 3] Processing p
  [1 of 2] Compiling H[abstract sig]  ( p/H.hsig, nothing )
  [2 of 2] Compiling A                ( p/A.hs, nothing )
[2 of 3] Processing q
  Instantiating q()
  [1 of 1] Compiling H                ( q/H.hs, nothing )
[3 of 3] Processing r
  Instantiating r()

bkpfail01.bkp:14:5: error:
    Cannot use module q():H to instantiate hole at H
    Missing implementations of: H, H
